--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <title>Cahit Kaya Github Profil</title>
+    <link rel="stylesheet" href="main.css">
+</head>
 <body>
-Hello World!
+
+<div class="main">
+    <div class="header">
+        <div class="title">This is a title</div>
+        <div class="image">image goes here</div>
+    </div>
+    <div class="content">
+        Content goes here
+    </div>
+</div>
+
 </body>
 </html>
