--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Cahit Kaya Github Profil</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:700|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
