--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <div class="main">
     <div class="header">
         <div class="title">This is a title</div>
-        <div class="image">image goes here</div>
+        <div class="image">
+            <div class="bubble bubble1"></div>
+            <div class="bubble bubble2"></div>
+            <div class="bubble bubble3"></div>
+            <div class="bubble bubble4"></div>
+            <div class="bubble bubble5"></div>
+        </div>
     </div>
     <div class="content">
         Content goes here
