--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="header">
         <div class="title">This is a title</div>
         <div class="image">
-            <div class="bubble bubble1"></div>
-            <div class="bubble bubble2"></div>
-            <div class="bubble bubble3"></div>
-            <div class="bubble bubble4"></div>
-            <div class="bubble bubble5"></div>
+            <div class="bubbles bubble bubble1"></div>
+            <div class="bubbles bubble bubble2"></div>
+            <div class="bubbles bubble bubble3"></div>
+            <div class="bubbles bubble bubble4"></div>
+            <div class="bubbles bubble bubble5"></div>
         </div>
     </div>
     <div class="content">
